# swagger/swagger.json
@@ -95,6 +95,51 @@
                 }
             }
         },
+        "/admin/kindergarten/student_class": {
+            "get": {
+                "tags": [
+                    "admin/kindergarten"
+                ],
+                "description": "学生姓名搜索班级",
+                "operationId": "KindergartenController.学生姓名搜索班级",
+                "parameters": [
+                    {
+                        "in": "query",
+                        "name": "name",
+                        "description": "姓名",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/.name"
+                        }
+                    },
+                    {
+                        "in": "query",
+                        "name": "page",
+                        "description": "页数",
+                        "type": "integer",
+                        "format": "int64"
+                    },
+                    {
+                        "in": "query",
+                        "name": "per_page",
+                        "description": "每页显示条数",
+                        "type": "integer",
+                        "format": "int64"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.Kindergarten"
+                        }
+                    },
+                    "403": {
+                        "description": ""
+                    }
+                }
+            }
+        },
         "/admin/kindergarten/{id}": {
             "get": {
                 "tags": [
@@ -3202,6 +3247,9 @@
             "type": "object"
         },
         ".boby": {
+            "type": "object"
+        },
+        ".name": {
             "type": "object"
         },
         "models.Kindergarten": {
